update article 20200322_abc

--- a/content/20200322_abc159.md
+++ b/content/20200322_abc159.md
@@ -72,6 +72,13 @@ TLE。まぁ雰囲気的にもだめ。題意の解は求められるけど
 の3重ループの愚直な実装でTLE。  
 これはもうちょい数学的考察で短くできそうなため、解説見て復習する。
 
+---
+
+追記：  
+[https://atcoder.jp/contests/abc159/submissions/11142253](https://atcoder.jp/contests/abc159/submissions/11142253)  
+解説を参考に無事AC、これは数学的考察力の不足
+
+
 <br>
 <br>
 
@@ -80,6 +87,6 @@ TLE。まぁ雰囲気的にもだめ。題意の解は求められるけど
 2ヶ月ほど挑戦して、基本的な考え方はつかめてきた一方で、
 
 * 単純な実装力の不足、アルゴリズムの知識の不足
-* 問題に対する数学的考察、計算量を落とす工夫
+* 問題に対する数学的考察、計算量を落とす工夫、および基本的な数学の知識
 
 に対して、勉強する必要があると感じているし、逆にそこが不足していることがだいぶわかってきたので引き続き勉強を続けていきたい。
