modify update article 20200412 abc162

--- a/content/20200412_abc162.md
+++ b/content/20200412_abc162.md
@@ -69,6 +69,27 @@ https://note.nkmk.me/python-gcd-lcm/
 
 あとで解説見て復習する。  
 
+### C 追記 20200413 00:00
+
+他の人のAC回答見てたら、これで通ってた。。。  
+```c2.py
+k = int(input())
+
+import math
+
+total = 0
+for a in range(1,k+1):
+    for b in range(1,k+1):
+        tmp = math.gcd(a,b)
+        for c in range(1,k+1):
+            total += math.gcd(tmp,c)
+print (total)
+```
+えええ、計算量変わってない（むしろ一つの組み合わせに対して math.gcd() を2回やってるから計算量的には増えてる）けど、reduce 分削ったらこれで収まるのか。。  
+完全に余計なことしてただけなのが発覚、方向性は間違ってなかった。。orz  
+えーんこんなことでレート落とすとは。。orz  
+
+
 ## D
 
 [D - RGB Triplets](https://atcoder.jp/contests/abc162/tasks/abc162_d)
