--- a/content/20200412_centos8_1.md
+++ b/content/20200412_centos8_1.md
@@ -66,6 +66,12 @@ VirtualMachie ができたら、起動する。
   * キーボード: 日本語
   * 言語サポート: 英語を追加（OSは英語で使う）
   * 日付と時刻: Asia/Tokyo
+
+* ソフトウェア
+  * サーバーを選択
+
+<a target=_blank href="https://blog.watarinohibi.tokyo/images/20200412_vm8.png"><img src="https://blog.watarinohibi.tokyo/images/20200412_vm8.png" width="500"></a>   
+
 * ネットワークとホスト名
   * enp0s3 を有効化(NAT)
   * enp0s8 を有効化(HostOnly)
