modify article 20200412 centos8

--- a/content/20200412_centos8_1.md
+++ b/content/20200412_centos8_1.md
@@ -59,25 +59,29 @@ VirtualMachie ができたら、起動する。
 無事インストーラが起動したら、インストール画面になる。  
 以下の順番で設定。  
 
-* インストール言語
-  *  日本語を選択（キーボードを日本語マッピングにしておきたいため）
+**インストール言語**  
 
-* インストール概要
-  * キーボード: 日本語
-  * 言語サポート: 英語を追加（OSは英語で使う）
-  * 日付と時刻: Asia/Tokyo
+* 日本語を選択（キーボードを日本語マッピングにしておきたいため）
 
-* ソフトウェア
-  * サーバーを選択
+**インストール概要**  
+
+* キーボード: 日本語
+* 言語サポート: 英語を追加（OSは英語で使う）
+* 日付と時刻: Asia/Tokyo
+
+**ソフトウェア**  
+
+* お好きなものを選択、今回の手順ではGUI使用を選んでいる
 
 <a target=_blank href="https://blog.watarinohibi.tokyo/images/20200412_vm8.png"><img src="https://blog.watarinohibi.tokyo/images/20200412_vm8.png" width="500"></a>   
 
-* ネットワークとホスト名
-  * enp0s3 を有効化(NAT)
-  * enp0s8 を有効化(HostOnly)
 
-上記以外はそのままでOK、必要に応じて設定する  
- → インストール開始
+**ネットワークとホスト名**  
+
+* enp0s3 を有効化(NAT)
+* enp0s8 を有効化(HostOnly)
+
+上記以外はそのままでOK、必要に応じて設定する → インストール開始
 
 ユーザの作成とrootのパスワード設定を要求されるので、rootのパスワードのみ設定
 
