modify article 20200412_cnetos8 modify tag

--- a/content/20200412_centos8_1.md
+++ b/content/20200412_centos8_1.md
@@ -1,7 +1,7 @@
 Title: Windows10 の VirtualBox に CentOS8 をインストールして使う (1)
 Date: 2020-04-12
 Category: Tech 
-Tags: VM, CentOs8, virtualBox
+Tags: VM, CentOS8, virtualBox
 Slug: centos8_vm_1
 Authors: s.hosoya
 
