update article 20200426 abc164

--- a/content/20200426_abc164.md
+++ b/content/20200426_abc164.md
@@ -103,6 +103,14 @@ print (c)
 
 ---
 
+D問題、writerさんの解説
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">アライグマ「D問題は、ABC158Eの下位互換なのだ。Sのi文字目以降を2019で割ったあまりが等しい組の個数を求めればいいのだ！　E問題は、(今いる都市,銀貨の枚数)を頂点にしてダイクストラをすればいいのだ！　銀貨は2500枚くらいしかいらないから頂点数が増えすぎなくて解けるのだ！」 <a href="https://t.co/kJmTEBJKMp">pic.twitter.com/kJmTEBJKMp</a></p>&mdash; 競技プログラミングをするフレンズ (@kyopro_friends) <a href="https://twitter.com/kyopro_friends/status/1254407777725734913?ref_src=twsrc%5Etfw">April 26, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+わからんので、また考えてみる。。  
+
+---
+
 レート更新結果、茶にはあがれました！！よかったーようやく。。  
 たぶんまたしばらく茶でうろうろするだろうけど、少しずつ勉強していこう。
 
