--- a/content/20200427_atcoder.md
+++ b/content/20200427_atcoder.md
@@ -72,7 +72,7 @@ paiza は、C問題までは雰囲気実装でできたけど、Bになると途
 目下、今後の目標は上記3つのそれぞれをちょっとずつ伸ばしつつ、
 
 * AtCoder は 茶の上位を目指す
-** Cを安定してクリアし、内容によってはDも解けるようになる
+    * Cを安定してクリアし、内容によってはDも解けるようになる
 
 * paizaは、Bに挑戦してクリアする
 
