add article abc165

--- a/content/20200502_abc165.md
+++ b/content/20200502_abc165.md
@@ -66,3 +66,10 @@ Cよりよっぽど簡単だったのでは。。
 えーん、灰に逆戻り(´；ω；｀)    
   
 ![ac_rate](https://blog.watarinohibi.tokyo/images/20200502_ac_rate.png "ac_rate")  
+
+---
+
+と思ったら、 unrated かもとのこと？  
+まぁ灰/茶なんて小さな差だからどっちでもいいっちゃいんだけど。。  
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【ABC165】E問題において、問題文に書かれている制約と、実際に異なる入力が与えられていたことが発覚しました。現在対応を協議中です。</p>&mdash; AtCoder (@atcoder) <a href="https://twitter.com/atcoder/status/1256583866812297216?ref_src=twsrc%5Etfw">May 2, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
