modify test.md テスト中。。。

--- a/content/19700101_test.md
+++ b/content/19700101_test.md
@@ -39,6 +39,16 @@ if __name__ == '__main__':
   main()
 ```
 
+~~~{.python}
+#!/usr/bin/env python3
+# -*- coding: utf-8 -*-
+def main():
+    print ("hello")
+ 
+if __name__ == '__main__':
+  main()
+~~~
+
 ```
 #!/bin/bash
 set -euC
@@ -48,17 +58,57 @@ exit 0
 ```
 
 ```
+#!/bin/bash
+set -euC
+
+echo "heelo!"
+exit 0
+```
+
+
+```
 set -euC
 
 echo "hello!"
 exit 0
 ```
 
+~~~
+set -euC
+
+echo "hello!"
+exit 0
+~~~
+
 ```
 # bash command
 # bash command
 # echo "hello!"
 ```
+
+~~~
+# bash command
+# bash command
+# echo "hello!"
+~~~
+
+~~~{.bash}
+# bash command
+# bash command
+# echo "hello!"
+~~~
+
+```
+text
+text
+text
+```
+
+~~~
+text
+text
+text
+~~~
 
 | head1 | head2 |
 | - | - |
