modify article test page

--- a/content/19700101_test.md
+++ b/content/19700101_test.md
@@ -29,11 +29,105 @@ __test__
 
 ---
 
+## コードブロックを使うサンプル
+
+### python
+
+~~~python
+#!/usr/bin/env python3
+
+def main():
+    print ("hello1")
+
+if __name__ == '__main__':
+  main()
+~~~
+
+
+### shell script
+
+~~~sh
+#!/bin/bash
+set -euC
+echo "Hello!"
+
+A=1
+print $((A+2))
+exit 0
+~~~
+
+### bash commands
+
+~~~bash
+# bash commands
+$ cd /dir
+$ FILE=test
+$ touch "${FILE}"
+$ echo "test" >>"${FILE}"
+$ rm "${FILE}"
+$ exit
+ → ログアウト
+~~~
+
+### text
+
+~~~html
+# cat test.txt
+text1
+text2
+text3
+aaaa
+~~~
+
+## テーブル
+
+| head1 | head2 |
+| - | - |
+| e1 | e2 |
+| e3 | e4 <br> e5 |
+
+## リンク
+
+[google](https://www.google.com/)    
+![prof](https://pbs.twimg.com/profile_images/876642881733238784/9AZsiFwT_400x400.jpg "prof")  
+[![CC0](https://licensebuttons.net/p/zero/1.0/88x31.png "CC0")](http://creativecommons.org/publicdomain/zero/1.0/deed.ja)  
+
+## HTML
+
+<b>b</b>
+</br>
+<i>i<i>
+</br>
+<div style="text-align:center">センターマン</div>
+
+## js
+
+<p id="RealtimeClockArea">※ここに時計が表示されます。</p>
+<script>
+function showClock1() {
+   var nowTime = new Date();
+   var nowHour = nowTime.getHours();
+   var nowMin  = nowTime.getMinutes();
+   var nowSec  = nowTime.getSeconds();
+   var msg = "現在時刻は、" + nowHour + ":" + nowMin + ":" + nowSec + " です。";
+   document.getElementById("RealtimeClockArea").innerHTML = msg;
+}
+setInterval('showClock1()',1000);
+</script>
+
+<input type="button" value="button" onclick="document.getElementById('output').innerHTML='button';" /><br />
+<br />
+<div id="output"></div>
+
+---
+
+※以下、残骸
+
 ```
 #!/usr/bin/env python3
 # -*- coding: utf-8 -*-
 def main():
-    print ("hello")
+    print ("hello1")
  
 if __name__ == '__main__':
   main()
@@ -43,11 +137,32 @@ if __name__ == '__main__':
 #!/usr/bin/env python3
 # -*- coding: utf-8 -*-
 def main():
-    print ("hello")
+    print ("hello2")
  
 if __name__ == '__main__':
   main()
 ~~~
+
+    :::python
+    #!/usr/bin/env python3
+    # -*- coding: utf-8 -*-
+    def main():
+        print ("hello3")
+
+    if __name__ == '__main__':
+      main()
+
+---
+
+    :::python
+    def main():
+        print ("hello4")
+
+    if __name__ == '__main__':
+      main()
+
+
+---
 
 ```
 #!/bin/bash
@@ -93,9 +208,21 @@ exit 0
 ~~~
 
 ~~~{.bash}
-# bash command
+# bash commands
+
 # bash command
 # echo "hello!"
+# A=1
+# echo $((A+2))
+~~~
+
+~~~{.html}
+# bash commands
+
+$ bash command
+$ echo hello
+$ A=1
+$ echo $((A+2))
 ~~~
 
 ```
@@ -110,14 +237,89 @@ text
 text
 ~~~
 
-| head1 | head2 |
-| - | - |
-| e1 | e2 |
-| e3 | e4 <br> e5 |
+```
+NAME="Amazon Linux"
+VERSION="2"
+ID="amzn"
+ID_LIKE="centos rhel fedora"
+VERSION_ID="2"
+PRETTY_NAME="Amazon Linux 2"
+ANSI_COLOR="0;33"
+CPE_NAME="cpe:2.3:o:amazon:amazon_linux:2"
+HOME_URL="https://amazonlinux.com/"
+Amazon Linux release 2 (Karoo)
+```
 
-[google](https://www.google.com/)    
-![prof](https://pbs.twimg.com/profile_images/876642881733238784/9AZsiFwT_400x400.jpg "prof")  
-[![CC0](https://licensebuttons.net/p/zero/1.0/88x31.png "CC0")](http://creativecommons.org/publicdomain/zero/1.0/deed.ja)  
+```html
+NAME="Amazon Linux"
+VERSION="2"
+ID="amzn"
+ID_LIKE="centos rhel fedora"
+VERSION_ID="2"
+PRETTY_NAME="Amazon Linux 2"
+ANSI_COLOR="0;33"
+CPE_NAME="cpe:2.3:o:amazon:amazon_linux:2"
+HOME_URL="https://amazonlinux.com/"
+Amazon Linux release 2 (Karoo)
+```
+
+~~~
+NAME="Amazon Linux"
+VERSION="2"
+ID="amzn"
+ID_LIKE="centos rhel fedora"
+VERSION_ID="2"
+PRETTY_NAME="Amazon Linux 2"
+ANSI_COLOR="0;33"
+CPE_NAME="cpe:2.3:o:amazon:amazon_linux:2"
+HOME_URL="https://amazonlinux.com/"
+Amazon Linux release 2 (Karoo)
+~~~
+
+~~~{.html}
+# cat /etc/redhat-release
+NAME="Amazon Linux"
+VERSION="2"
+ID="amzn"
+ID_LIKE="centos rhel fedora"
+VERSION_ID="2"
+PRETTY_NAME="Amazon Linux 2"
+ANSI_COLOR="0;33"
+CPE_NAME="cpe:2.3:o:amazon:amazon_linux:2"
+HOME_URL="https://amazonlinux.com/"
+Amazon Linux release 2 (Karoo)
+~~~
+
+    :::html
+    # cat /etc/redhat-release
+    NAME="Amazon Linux"
+    VERSION="2"
+    ID="amzn"
+    ID_LIKE="centos rhel fedora"
+    VERSION_ID="2"
+    PRETTY_NAME="Amazon Linux 2"
+    ANSI_COLOR="0;33"
+    CPE_NAME="cpe:2.3:o:amazon:amazon_linux:2"
+    HOME_URL="https://amazonlinux.com/"
+    Amazon Linux release 2 (Karoo)
+
+---
+
+.. code-block:: python
+
+   print("Pelican is a static site generator.")
+
+
+There are two ways to specify the identifier:
+
+    :::python
+    print("The triple-colon syntax will *not* show line numbers.")
+
+To display line numbers, use a path-less shebang instead of colons:
+
+    #!python
+    print("The path-less shebang syntax *will* show line numbers.")
+
 
 ---
 
