update article 20200505 pot

--- a/content/20200505_pot.md
+++ b/content/20200505_pot.md
@@ -146,3 +146,9 @@ if __name__ == '__main__':
     フリーのEC2インスタンス（t2.micro）なので、あまりたくさんはできなさそう  
 
 というのを、引き続きやっていきたい。
+
+## 現在のページ
+
+まだショボショボｗ   
+
+![current_index](https://blog.watarinohibi.tokyo/images/20200505_pot_current_index.png "current_index")   
