--- a/content/20200515_past.md
+++ b/content/20200515_past.md
@@ -47,9 +47,15 @@ Authors: s.hosoya
 [Pythonで競技プログラミング -ライブラリ編-](https://qiita.com/Kentaro_okumura/items/5b95b767a2e691cd5482)  
 [競プロで使える！Python標準ライブラリ](https://qiita.com/__ynyn__/items/9e75cc37c4b4541a8dd2)  
 
-## ABS
+## 練習
 
-[AtCoder Beginners Selection](https://atcoder.jp/contests/abs)
+* ABS
+
+[AtCoder Beginners Selection](https://atcoder.jp/contests/abs)  
+
+* 練習問題
+
+[AtCoder に登録したら次にやること ～ これだけ解けば十分闘える！過去問精選 10 問 ～](https://qiita.com/drken/items/fd4e5e3630d0f5859067)  
 
 ---
 
