modify article 20200516 practice image url

--- a/content/20200516_practice.md
+++ b/content/20200516_practice.md
@@ -7,7 +7,7 @@ Authors: s.hosoya
 
 今日は練習問題をちょこちょこ。
 
-![daily_effort](https://blog.watarinohibi.tokyo/images/20200516_ef "daily_effort")   
+![daily_effort](https://blog.watarinohibi.tokyo/images/20200516_ef.png "daily_effort")   
 
 
 [AtCoder に登録したら次にやること ～ これだけ解けば十分闘える！過去問精選 10 問 ～](https://qiita.com/drken/items/fd4e5e3630d0f5859067)  
