modify category miscellanoeousNotes

--- a/content/20200426_misc.md
+++ b/content/20200426_misc.md
@@ -1,6 +1,6 @@
 Title: 雑記 20200426
 Date: 2020-04-26
-Category: miscellaneous notes 
+Category: miscellaneousNotes 
 Tags: 雑記
 Slug: miscellaneous_notes_20200426
 Authors: s.hosoya
