--- a/content/20200411_misc.md
+++ b/content/20200411_misc.md
@@ -1,6 +1,6 @@
 Title: 雑記 20200411
 Date: 2020-04-11
-Category: miscellaneous notes 
+Category: miscellaneousNotes 
 Tags: 雑記
 Slug: miscellaneous_notes_20200411
 Authors: s.hosoya
