--- a/content/20200517_misc.md
+++ b/content/20200517_misc.md
@@ -1,6 +1,6 @@
 Title: 雑記 20200517
 Date: 2020-05-17
-Category: miscellaneous notes 
+Category: miscellaneousNotes 
 Tags: 雑記
 Slug: miscellaneous_notes_20200517
 Authors: s.hosoya
