いくつくかの記事でカテゴリを修正

--- a/content/20200411_misc.md
+++ b/content/20200411_misc.md
@@ -1,8 +1,8 @@
 Title: 雑記 20200411
 Date: 2020-04-11
-Category: miscellaneousNotes 
+Category: 雑記
 Tags: 雑記
-Slug: miscellaneous_notes_20200411
+Slug: misc_20200411
 Authors: s.hosoya
 
 雑記を書きたくて。  
