--- a/content/20200426_misc.md
+++ b/content/20200426_misc.md
@@ -1,8 +1,8 @@
 Title: 雑記 20200426
 Date: 2020-04-26
-Category: miscellaneousNotes 
+Category: 雑記
 Tags: 雑記
-Slug: miscellaneous_notes_20200426
+Slug: misc_20200426
 Authors: s.hosoya
 
 このサイトのPelicanのテーマを変更したり、いろいろ調整したりなど。  
