--- a/content/20200517_misc.md
+++ b/content/20200517_misc.md
@@ -1,8 +1,8 @@
 Title: 雑記 20200517
 Date: 2020-05-17
-Category: miscellaneousNotes 
+Category: 雑記
 Tags: 雑記
-Slug: miscellaneous_notes_20200517
+Slug: misc_20200517
 Authors: s.hosoya
 
 今日は天気も良かったので、妻とぶらぶらお散歩してきた雑記。
