--- a/content/20200519_misc.md
+++ b/content/20200519_misc.md
@@ -1,6 +1,6 @@
 Title: 雑記 20200519
 Date: 2020-05-19
-Category: miscellaneousNotes 
+Category: 雑記
 Tags: 雑記
 Slug: miscellaneous_notes_20200519
 Authors: s.hosoya
