add article 20200525 book

--- a/content/20200519_misc.md
+++ b/content/20200519_misc.md
@@ -2,7 +2,7 @@ Title: 雑記 20200519
 Date: 2020-05-19
 Category: 雑記
 Tags: 雑記
-Slug: miscellaneous_notes_20200519
+Slug: misc_20200519
 Authors: s.hosoya
 
 本日は妻の定期産科検診。  
