modify article 20200709 fix image url

--- a/content/20200709_misc.md
+++ b/content/20200709_misc.md
@@ -5,7 +5,7 @@ Tags: 雑記, Integromat
 Slug: misc_20200709
 Authors: s.hosoya
 
-![wine](https://blog.watarinohibi.tokyo/images/20200709_sine.png "wine")   
+![wine](https://blog.watarinohibi.tokyo/images/20200709_wine.jpg "wine")   
 
 # 妻は妊娠後期
 
